Switched back to custom routes utilizing local variable passing for each form.

--- a/app/views/kittens/edit.html.erb
+++ b/app/views/kittens/edit.html.erb
@@ -1,3 +1,5 @@
 <h1>kittens#edit</h1>
 
-<%= render "form" %>
+<%= form_with model: @kitten, url: update_kitten_path(@kitten) do |form| %>
+  <%= render "form", form: form %>
+<% end %>
