--- a/app/views/kittens/_kitten.html.erb
+++ b/app/views/kittens/_kitten.html.erb
@@ -1,3 +1,3 @@
 <hr>
-<h1 style="display: inline;"><%= link_to kitten.name, kitten_path(kitten) %></h1> | 
-<%= link_to "Destroy", kitten, method: :delete %>
+<h1 style="display: inline;"><%= link_to kitten.name, show_kitten_path(kitten) %></h1> | 
+<%= link_to "Destroy", destroy_kitten_path(kitten), method: :delete %>
