--- a/app/views/kittens/show.html.erb
+++ b/app/views/kittens/show.html.erb
@@ -5,4 +5,4 @@
 <h3>Breed: <%= @kitten.breed %></h3>
 <h3>Color: <%= @kitten.color %></h3>
 <%= link_to "Edit", edit_kitten_path(@kitten) %> | 
-<%= link_to "Destroy", @kitten, method: :delete %>
+<%= link_to "Destroy", destroy_kitten_path(@kitten), method: :delete %>
