--- a/app/views/kittens/new.html.erb
+++ b/app/views/kittens/new.html.erb
@@ -1,5 +1,5 @@
 <h1>kittens#new</h1>
 
-<%= form_with model: @kitten, url: new_kitten_path do |form| %>
+<%= form_with model: @kitten, url: create_kitten_path do |form| %>
   <%= render "form", form: form %>
 <% end %>
